<resources>
    <string name="app_name">Karuba Tile Selector</string>
    <string name="pick_tile_from_stack">Press here to flip a tile from the stack</string>
    <string name="no_more_tiles">No more tiles to draw</string>
    <string name="tile">Tile</string>
    <string name="title_activity_karuba_pref">Settings</string>
    <string name="start_new_game">Start a new game</string>
    <string name="app_settings">Application Settings</string>

    <string name="pref_key_declare_tile_out_loud" translatable="false">key_tile_out_loud</string>
    <string name="stay_silent">Stay silent</string>
    <string name="speak">Speak</string>
    <string name="declare_tile_out_loud_title">Declare new tile number out loud</string>

    <string name="pref_key_chime_on_gem" translatable="false">key_chime</string>
    <string name="chime">Chime</string>
    <string name="chime_on_gem_title">Chime for a tile with a gem</string>

    <string name="pref_key_play_bg_music" translatable="false">key_bg_music</string>
    <string name="bg_music">Ambient music</string>
    <string name="play_bg_music_title">Play background music</string>

    <string name="icons_by">Icons by Icons8</string>
    <string name="credits">Credits:</string>
    <string name="haba">Karuba is a wonderful game by HABA.\nThe author of this app is not affiliated with HABA in any way.\nThe app was created as an aid to the game and cannot replace the game itself.</string>
    <string name="start_new_game_question">Do you want to start a new game?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="background_image_by">Background image by Vecteezy.com</string>
    <string name="TTS_missing_lang_error">Please note: Tile speech declaration will not work as the English language is missing or not supported on this device"</string>
    <string name="tile_tts_ready">Tile declaration is ready</string>
    <string name="tile_tts_not_ready">Tile declaration is not ready yet, loading speech engine...</string>
    <string name="music_credit">Jungle music, Heart of the Jungle by Alexander Hoff, licensed under a Creative Commons Attribution 4 International License</string>
    <string name="temple_icon">Temple icon made by Freepik from www.flaticon.com</string>

</resources>
