<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:defaultValue="@bool/declare_tile_name_out_loud"
        app:key="@string/pref_key_declare_tile_out_loud"
        app:summaryOff="@string/stay_silent"
        app:summaryOn="@string/speak"
        app:title="@string/declare_tile_out_loud_title"
        app:iconSpaceReserved="false"/>

    <SwitchPreferenceCompat
        app:defaultValue="@bool/chime_on_gem"
        app:key="@string/pref_key_chime_on_gem"
        app:summaryOff="@string/stay_silent"
        app:summaryOn="@string/chime"
        app:title="@string/chime_on_gem_title"
        app:iconSpaceReserved="false"/>

    <SwitchPreferenceCompat
        app:defaultValue="@bool/play_bg_music"
        app:key="@string/pref_key_play_bg_music"
        app:summaryOff="@string/stay_silent"
        app:summaryOn="@string/bg_music"
        app:title="@string/play_bg_music_title"
        app:iconSpaceReserved="false"/>


</androidx.preference.PreferenceScreen>
